--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </ul>
     </div>
     <div>
-      <h4>Summary</h4>
+      <h4 id="summary"> Summary</h4>
       <p>
         Coding is fun. I love HTML. 
       </p>
