--- a/index.html
+++ b/index.html
@@ -1,56 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Alex Long, Chemist</title>
+  <title>Alexander Long: About Me</title>
   <meta charset="UTF-8">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
   <div id="wrapper">
-    <h1>Alex Long</h1>
+    <h1>Alexander Long</h1>
     <p>
-      <img src="Alex.jpg">
+      <img id="picture" src="Alex.jpg">
     </p>
-    <h2>Magician</h2>
+    <h2>MBA Candidate at Kellogg School of Management</h2>
     <h3>Evanston, IL</h3>
     <div>
       <h4>Get In Touch!</h4>
       <ul>
-        <li><a href="mailto:walter@walterwhite.com">Email</a></li>
-        <li><a href="http://twitter.com/walterwhite">Twitter</a></li>
-        <li><a href="http://facebook.com/walterwhite">Facebook</a></li>
+        <li><a href="mailto:along2016@kellogg.northwestern.edu">Email</a></li>
+        <li><a href="https://www.linkedin.com/in/alexlong2">LinkedIn</a></li>
+        <li><a href="https://www.facebook.com/alex.long.925">Facebook</a></li>
       </ul>
     </div>
     <div>
-      <h4 id="summary"> Summary</h4>
-      <p>
-        Coding is fun. I love HTML. 
+      <h4>Summary</h4>
+      <p CLASS = info>
+        Coding is fun. I love HTML and CSS.  
       </p>
-    </div>
-    <div>
-      <h4>Experience</h4>
-      <div>
-        <h5>Co-Owner, A1A Car Wash</h5>
-        <p>You've Tried the Rest – Now Try the Best™. And don't forget to Have an A1 Day™!</p>
-      </div>
-      <div>
-        <h5>Chemistry Teacher, J.P. Wynne High School</h5>
-        <p>J.P. Wynne High School is a public high school located in Albuquerque, New Mexico. Walter was well-liked by his many students.</p>
-      </div>
     </div>
     <div>
       <h4>Skills</h4>
       <ul>
         <li>Ninja</li>
-        <li>Roundhouse Kicks</li>
+        <li>Tree Felling</li>
+        <li>Sparrow Face</li>
+        <li>Parallel Parking</li>
       </ul>
     </div>
     <div>
       <h4>Hobbies</h4>
-      <ul>
-        <li>Cooking</li>
-      </ul>
+      <p CLASS = info>Traveling, Snowboarding, Backpacking, Music, and People. </p>
     </div>
   </div>
 </body>
