Updated website text

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
      </div>
     <h2>Welcome to the site.</h2>
     <!-- <p>&nbsp;</p> -->
-    <h3>Are you obsessed with "Cake by the Ocean?" Yeah, us too. So we made this place as a little corner of the world to turn when we need to indulge in our guilty pleasure. So stick around awhile and play the song on repeat, watch a live acoustic performance, or simply stare at the album art. We get it - your secret's safe with us.</h3>
+    <h3>Are you obsessed with "Cake by the Ocean?" Yeah, us too. So we made this place as a little corner of the world to turn when we need to indulge in our guilty pleasure. Stick around awhile and play the song on repeat, watch a live acoustic performance, or simply stare at the album art. We get it - your secret's safe with us.</h3>
   <p>&nbsp;</p> 
 
     <div class="container-fluid">
