Took images out of folder since not working

--- a/city.html
+++ b/city.html
@@ -70,40 +70,40 @@
       <p>&nbsp;</p>
       <div class="row">
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/acg936.jpg"></a>
+          <a href="#" class="thumbnail"><img src="acg936.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/adv397.jpg"></a>
+          <a href="#" class="thumbnail"><img src="adv397.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/amg239.jpg"></a>
+          <a href="#" class="thumbnail"><img src="amg239.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/amn303.jpg"></a>
+          <a href="#" class="thumbnail"><img src="amn303.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/ant431.jpg"></a>
+          <a href="#" class="thumbnail"><img src="ant431.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/aps608.jpg"></a>
+          <a href="#" class="thumbnail"><img src="aps608.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/asl299.jpg"></a>
+          <a href="#" class="thumbnail"><img src="asl299.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/bnh369.jpg"></a>
+          <a href="#" class="thumbnail"><img src="bnh369.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/cec767.jpg"></a>
+          <a href="#" class="thumbnail"><img src="cec767.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/chb097.jpg"></a>
+          <a href="#" class="thumbnail"><img src="chb097.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/chf565.jpg"></a>
+          <a href="#" class="thumbnail"><img src="chf565.jpg"></a>
         </div>
         <div class="col-xs-4 col-sm-2">
-          <a href="#" class="thumbnail"><img src="images/crh123.jpg"></a>
+          <a href="#" class="thumbnail"><img src="crh123.jpg"></a>
         </div>
       </div>
     </div>
