--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
  <link href='https://fonts.googleapis.com/css?family=Caveat+Brush' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="container-fluid">
+<!--   <div class="container-fluid"> -->
     <nav class="navbar navbar-default">
     <div class="container-fluid">
       <!-- Brand and toggle get grouped for better mobile display -->
