--- a/city.html
+++ b/city.html
@@ -14,7 +14,7 @@
     <script src="city.js"></script>
   </head>
   <body>
-    <!-- <div class="container"> -->
+    <!-- <div class="container-fluid"> -->
       
 
 
@@ -63,6 +63,8 @@
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+
+<div class="container-fluid">
       <p>&nbsp;</p>
       <p>&nbsp;</p>
       <h1>Which Touring Cities Will You See DNCE In?</h1>
@@ -106,6 +108,7 @@
           <a href="#" class="thumbnail"><img src="crh123.jpg"></a>
         </div>
       </div>
+    </div>
     </div>
   </body>
 </html>
