Added grid to About page

--- a/About.html
+++ b/About.html
@@ -60,12 +60,35 @@
     <div class="container-fluid">
        </div>
     <h2>All About DNCE.</h2>
-    <h3>
-      <img src="band.jpg">
-    </h3>
     <p>&nbsp;</p>
-    <h4>DNCE is an exuberant dance-rock group centered on former Jonas Brother, singer Joe Jonas. Formed in 2015, DNCE (which stands for dance) also includes Korean-born guitarist JinJoo Lee (Jordin Sparks, Charlie XCX, Cee-Lo Green), bassist/keyboardist Cole Whittle (Semi-Precious Weapons) and drummer Jack Lawless (Demi Lovato, Miley Cyrus). With the breakup of the his phenomenally popular band Jonas Brothers in 2013, Jonas began percolating the concept of forming another act. However, rather than choosing to hire studio musicians, Jonas eventually wrangled the talents of former Jonas Brother touring drummer Lawless, along with Lee, who opened for the Brothers while touring with Jordin Sparks. Jonas then brought on Semi-Precious Weapons member Whittle and DNCE was complete. In September 2015, DNCE released the single "Cake by the Ocean," premiering the track on New York's Z100.</h4>
+      <div class="container-fluid">
+    <div class="row">
+<!--       <div class="col-md-8">
+        <iframe width="900" height="400" src="https://www.youtube.com/embed/WVsQmeJT5ys" frameborder="0" allowfullscreen></iframe>
+      </div>
+ -->      <div class="col-sm-5">
+        <img src="band.jpg">
+      </div>
+      <div class="col-md-7">
+            <p>DNCE is an exuberant dance-rock group centered on former Jonas Brother, singer Joe Jonas. Formed in 2015, DNCE (which stands for dance) also includes Korean-born guitarist JinJoo Lee (Jordin Sparks, Charlie XCX, Cee-Lo Green), bassist/keyboardist Cole Whittle (Semi-Precious Weapons) and drummer Jack Lawless (Demi Lovato, Miley Cyrus). With the breakup of the his phenomenally popular band Jonas Brothers in 2013, Jonas began percolating the concept of forming another act. However, rather than choosing to hire studio musicians, Jonas eventually wrangled the talents of former Jonas Brother touring drummer Lawless, along with Lee, who opened for the Brothers while touring with Jordin Sparks. Jonas then brought on Semi-Precious Weapons member Whittle and DNCE was complete. In September 2015, DNCE released the single "Cake by the Ocean," premiering the track on New York's Z100.</p>
+        
+        </div>
+
+    <p>&nbsp;</p>
+    <!-- <h4>DNCE is an exuberant dance-rock group centered on former Jonas Brother, singer Joe Jonas. Formed in 2015, DNCE (which stands for dance) also includes Korean-born guitarist JinJoo Lee (Jordin Sparks, Charlie XCX, Cee-Lo Green), bassist/keyboardist Cole Whittle (Semi-Precious Weapons) and drummer Jack Lawless (Demi Lovato, Miley Cyrus). With the breakup of the his phenomenally popular band Jonas Brothers in 2013, Jonas began percolating the concept of forming another act. However, rather than choosing to hire studio musicians, Jonas eventually wrangled the talents of former Jonas Brother touring drummer Lawless, along with Lee, who opened for the Brothers while touring with Jordin Sparks. Jonas then brought on Semi-Precious Weapons member Whittle and DNCE was complete. In September 2015, DNCE released the single "Cake by the Ocean," premiering the track on New York's Z100.</h4> -->
   <p>&nbsp;</p>
+
+    <!-- <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-8">
+        <iframe width="900" height="400" src="https://www.youtube.com/embed/WVsQmeJT5ys" frameborder="0" allowfullscreen></iframe>
+      </div>
+   
+      <div class="col-md-4">
+        <iframe src="https://embed.spotify.com/?uri=spotify%3Atrack%3A42ftjU4cTN5UTRksyqBKZJ" width="320" height="400" frameborder="0" allowtransparency="true"></iframe>
+      </div>
+    </div>
+  </div> -->
   </div>
 </body>
 </html>
